@@ -24,7 +24,8 @@ sub execute {
         require $sp
     };
     if ($@) {
-        $c->log->debug("Could not load $serializer, refusing to serialize: $@");
+        $c->log->debug("Could not load $serializer, refusing to serialize: $@")
+            if $c->debug;
         return 0;
     }
     my $body = $c->request->body;
@@ -48,7 +49,8 @@ sub execute {
         $c->request->data($rdata);
     } else {
         $c->log->debug(
-            'I would have deserialized, but there was nothing in the body!');
+            'I would have deserialized, but there was nothing in the body!')
+                if $c->debug;
     }
     return 1;
 }
